added functionality to set JVM options for gc logging, added form to view gc logging output