@@ -106,6 +106,17 @@ public class LaunchProcessDialog implements Initializable {
     private TextField txtMaxGCPauseMillis;
     @FXML
     private RadioButton rdbUseParNewGC;
+    @FXML
+    private RadioButton rdbVerboseGC;
+    @FXML
+    private RadioButton rdbPrintGCDetails;
+    @FXML
+    private RadioButton rdbPrintTenuringDistribution;
+    @FXML
+    private RadioButton rdbPrintTimeStamp;
+    @FXML
+    private RadioButton rdbPrintDateStamp;
+    
 
     private final GCExplorer app;
     private final MainForm parent;
@@ -410,6 +421,26 @@ public class LaunchProcessDialog implements Initializable {
             list.add("-XX:+UseCompressedOops");
         }
         
+        if (rdbVerboseGC.isSelected()){
+            list.add("-verbose:gc");
+        }
+        
+        if (rdbPrintDateStamp.isSelected()){
+            list.add("-XX:+PrintGCDateStamps");
+        }
+
+        if (rdbPrintTimeStamp.isSelected()){
+            list.add("-XX:+PrintGCTimeStamps");
+        }        
+        
+        if (rdbPrintGCDetails.isSelected()){
+            list.add("-XX:+PrintGCDetails");
+        }
+        
+        if (rdbPrintTenuringDistribution.isSelected()){
+            list.add("-XX:+PrintTenuringDistribution");
+        }
+    
         if (errorMsg.toString().isEmpty()) {
             return list;
         } else {
